--- a/package.json
+++ b/package.json
@@ -43,9 +43,7 @@
     "release:note": "node scripts/gen-release-note.js",
     "commit": "git-cz"
   },
-  "gitHooks": {
-    "commit-msg": "node scripts/verify-commit-msg.js"
-  },
+  "gitHooks": {},
   "lint-staged": {
     "*.js": [
       "eslint --fix",
